--- a/index.html
+++ b/index.html
@@ -510,18 +510,18 @@
 
                     <form action="" class="contact__form" id="contact-form">
                         <div class="contact__form-div">
-                            <label for="" class="contact__form-tag">Your Name</label>
+                            <label class="contact__form-tag">Your Name</label>
                             <input type="text" name="user_name" required class="contact__form-input" id="contact-name"></input>
                         </div>
 
                         <div class="contact__form-div">
-                            <label for="" class="contact__form-tag">Your E-mail</label>
+                            <label class="contact__form-tag">Your E-mail</label>
                             <input type="email" name="user_email" required class="contact__form-input" id="contact-email"></input>
                         </div>
 
                         <div class="contact__form-div contact__form-area">
-                            <label for="" class="contact__form-tag">Your Message</label>
-                            <textarea name="user_project" id="" cols="30" rows="10" class="contact__form-input" id="contact-project"></textarea>
+                            <label class="contact__form-tag">Your Message</label>
+                            <textarea name="user_project" cols="30" rows="10" class="contact__form-input" id="contact-project"></textarea>
                         </div>
 
                         <p class="contact__message" id="contact-message"></p>
