--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <a href="#contact" class="nav__link">Contact</a>
                         </li>
                         <li class="nav__item-resume">
-                            <button class="nav__resume"> Resume <i class="fa-solid fa-download"></i></button> 
+                            <a href="images/Current-resume-for-Afolasade.pdf" class="nav__resume" download> Resume <i class="fa-solid fa-download"></i></a>
                         </li>
                     </ul>
 
@@ -101,6 +101,7 @@
                         <h3 class="home__info-title_meetme">
                             MEET ME
                         </h3>
+                        <span class="section__unit-meetme">Here you go</span>
 
                         <p class="home__info-description_meetme">
                            Hi, I'm Afolasade, I would love that you address me as Fola 😍 <br>
@@ -109,8 +110,10 @@
                            high level programming knowledge from taking online courses on Udemy and Codecademy bagging an
                            expert frontend developer certificate. <br>
                            <br> For practical experiences, I recently interned at Xenoph Technologies Limited, where I sharpened
-                           my basic programming skills. I'm an independent employee with who pays close attention to details, naturally
-                           curious and perpetually working on improving my craft one design problem at a time.
+                           my basic programming skills. I enjoy exploring creative ideas to deliver quality and 
+                           visually compelling sites with user- friendly interactions.
+                           I'm an independent employee who pays close attention to details, naturally
+                           curious and perpetually working on improving my craft one design problem at a time. <br> <br> I also do fashion design and explore nature at my leisure.
                         </p>
                     </div>
                         <div>
@@ -163,16 +166,18 @@
           <!--==================== MEET ME ====================-->
            <section class="meetme section">
                 <h2 class="section__title">Meet Me</h2>
-                <span class="section__subtitle">Here you go</span>
+                <span class="section__unit">Here you go</span>
                 <div class="meetme__container container section__border">
                 <p class="meetme__description">Hi, I'm Afolasade, I would love that you address me as Fola 😍 <br>
-                I'm a frontend developer, I'm also a content creator and a creative writer who's passionate about exploring digital tools
-                to expand a brand's sales and visibility. Besides learning to have both technical and soft skills, I have acquired
-                high level programming knowledge from taking online courses on Udemy and Codecademy bagging an
-                expert frontend developer certificate. <br>
-                <br> For practical experiences, I recently interned at Xenoph Technologies Limited, where I sharpened
-                my basic programming skills. I'm an independent employee with who pays close attention to details, naturally
-                curious and perpetually working on improving my craft one design problem at a time.
+                    I'm a frontend developer, I'm also a content creator and a creative writer who's passionate about exploring digital tools
+                    to expand a brand's sales and visibility. Besides learning to have both technical and soft skills, I have acquired
+                    high level programming knowledge from taking online courses on Udemy and Codecademy bagging an
+                    expert frontend developer certificate. <br>
+                    <br> For practical experiences, I recently interned at Xenoph Technologies Limited, where I sharpened
+                    my basic programming skills. I enjoy exploring creative ideas to deliver quality and 
+                    visually compelling sites with user- friendly interactions.
+                    I'm an independent employee who pays close attention to details, naturally
+                    curious and perpetually working on improving my craft one design problem at a time. <br> <br> I also do fashion design and explore nature at my leisure.
                 </p>
                 </div>
             </section>
@@ -180,8 +185,8 @@
         <!--==================== SKILLS ====================-->
         <section class="skills section" id="skills">
             <h2 class="section__title">Skills</h2>
-            <span class="section__subtitle">My favorite skills</span>
-
+            <span class="section__subtitle">My most relevant skills</span>
+            <span class="section__unit">Knowing the right technologies leaves <br> a problem a step ahead solved</span>
             <div class="skills__container container grid section__border">
                 <!--==================== SKILLS 1 ====================-->
             <div class="skills__content">
@@ -233,7 +238,7 @@
 
                     <div class="skills__data">
                         <div class="skills__blob">
-                            <img src="images/tailwindcss.svg" alt="skills image6">
+                            <img src="images/wordpress-blue.svg" alt="skills image6">
                         </div>
 
                         <h3 class="skills__name">Wordpress</h3>
@@ -297,6 +302,7 @@
         <section class="services section" id="services">
             <h2 class="section__title">Services</h2>
             <span class="section__subtitle">What I offer</span>
+            <span class="section__unit">I can help your brand see <br> results that are expected</span>
 
             <div class="services__container container grid section__border">
                 <div class="services__card">
@@ -332,7 +338,7 @@
                         Creative / Content <br> Writing
                     </h2>
                     <p class="services__description">
-                        Giving people value that is what their read-time is my passion.
+                        Giving people value that is worth their read-time is my passion.
                     </p>
 
                     <div class="services__border"></div>
@@ -357,6 +363,7 @@
         <section class="projects section" id="projects">
             <h2 class="section__title">Projects</h2>
             <span class="section__subtitle">My most recent works</span>
+            <span class="section__unit">I love bringing ideas to life on the browser</span>
 
             <div class="container section__border">
                 <div class="projects__container swiper">
@@ -364,12 +371,19 @@
                         <!--==================== PROJECTS 1 ====================-->
                         <div class="projects__content swiper-slide">
                             <img src="images/preview.png" alt="project image1" class="projects__img">
+                            <div class="projects__layer">
+                                <p>This project presumes a 3-paged house-listing brand website based in California that provides list of houses whereby customers can book online and lodge singly or with
+                                    family members (at least, 5) on vacation in different parts of the world. It also features a share and earn benefit, whereby 
+                                    a person based in the country can share his/her excess house space with visitors at a price. <br> <br> It solves
+                                    lodging problems for travellers/visitors and also provides avenue for partners to earn while sharing.
+                                </p>
+                            </div>
 
                             <div>
                                 <span class="projects__subtitle">Advertising</span>
                                 <h1 class="projects__title">House booking/listing</h1>
 
-                                <a href="" class="projects__button">
+                                <a href="https://trabode.netlify.app" class="projects__button">
                                     View demo <i class="fas fa-arrow-right"></i>
                                 </a>
                             </div>
@@ -378,6 +392,13 @@
                         <!--==================== PROJECTS 2 ====================-->
                         <div class="projects__content swiper-slide">
                             <img src="images/preview.png" alt="project image1" class="projects__img">
+                            <div class="projects__layer">
+                                <p>This project presumes a Food brand whereby customers can have access to all the information about the various food and drink options that are available 
+                                    for sale at a given period, time or day. Customers can also meet the brand owner and basic information about the brand.
+                                    Walk-ins are available in the physical location at the stated time according to customer's preferences. <br> <br> It solves the problem of helping customers
+                                     decide their restaurant/ food choices without having to be physically present.
+                                </p>
+                            </div>
 
                             <div>
                                 <span class="projects__subtitle">Advertising</span>
@@ -392,12 +413,19 @@
                         <!--==================== PROJECTS 3 ====================-->
                         <div class="projects__content swiper-slide">
                             <img src="images/preview.png" alt="project image1" class="projects__img">
+                            <div class="projects__layer">
+                                <p>This project presumes a body fitness brand which provides different walk-in activities to registered customers, Users can have access to basic body fitness information,
+                                    they can also check their Body Mass Index(BMI) to know whether they are physically fit or close. They can also purchase any of
+                                    their choice plan and subscribe to receive fitness updates. <br> <br> It solves the problem of helping people(whether registered customers or not) to shape and build their ideal
+                                    body and live to the fullest.
+                                </p>
+                            </div>
 
                             <div>
                                 <span class="projects__subtitle">Advertising</span>
                                 <h1 class="projects__title">Body fitness</h1>
 
-                                <a href="" class="projects__button">
+                                <a href="https://befitn.netlify.app" class="projects__button">
                                     View demo <i class="fas fa-arrow-right"></i>
                                 </a>
                             </div>
@@ -406,6 +434,12 @@
                         <!--==================== PROJECTS 4 ====================-->
                         <div class="projects__content swiper-slide">
                             <img src="images/preview.png" alt="project image1" class="projects__img">
+                            <div class="projects__layer">
+                                <p>This project presumes a digital brand that provides digital products to its customers
+                                    ranging from Web development, App Development etc. They also provide a training workshop. <br> <br> It helps solve the problem of 
+                                    customers getting digital products / services at their fingertips. No stress, no hassle.
+                                </p>
+                            </div>
 
                             <div>
                                 <span class="projects__subtitle">Advertising</span>
@@ -420,6 +454,13 @@
                         <!--==================== PROJECTS 5 ====================-->
                         <div class="projects__content swiper-slide">
                             <img src="images/preview.png" alt="project image1" class="projects__img">
+                            <div class="projects__layer">
+                                <p>This project presumes an E-commerce brand that displays the list of items and products available
+                                    for sale to its customers. It also offers sweet discount and free delivery options and customers can purchase a 
+                                    item online and have it delivered right to them. <br> <br> It alleviates the stress that a customers has to go through 
+                                    before purchasing / owning any item even at reduced costs.
+                                </p>
+                            </div>
 
                             <div>
                                 <span class="projects__subtitle">E-commerce</span>
@@ -434,12 +475,18 @@
                         <!--==================== PROJECTS 6 ====================-->
                         <div class="projects__content swiper-slide">
                             <img src="images/preview.png" alt="project image1" class="projects__img">
+                            <div class="projects__layer">
+                                <p>This project is a two-paged Facebook cloned website. It displays similar features and characteristics with
+                                    Facebook and users can view their profile. Users can also use with the light or dark theme.
+                                    <br><br> You can literally view similar physical features of Facebook app on this project.
+                                </p>
+                            </div>
 
                             <div>
                                 <span class="projects__subtitle">Clone apps</span>
                                 <h1 class="projects__title">Facebook clone</h1>
 
-                                <a href="" class="projects__button">
+                                <a href="https://viralconnect.netlify.app" class="projects__button">
                                     View demo <i class="fas fa-arrow-right"></i>
                                 </a>
                             </div>
@@ -448,6 +495,11 @@
                         <!--==================== PROJECTS 7 ====================-->
                         <div class="projects__content swiper-slide">
                             <img src="images/preview.png" alt="project image1" class="projects__img">
+                            <div class="projects__layer">
+                                <p>This project presumes a Finance brand that displays get started features, and other banking features. <br> <br>It is designed with a user interface that allows users 
+                                    to get an easy and swift online banking experience.
+                                </p>
+                            </div>
 
                             <div>
                                 <span class="projects__subtitle">Finance</span>
@@ -478,7 +530,7 @@
         <!--==================== CONTACT ====================-->
         <section class="contact section" id="contact">
             <h2 class="section__title">Contact Me</h2>
-            <span class="section__subtitle">Get in touch</span>
+            <span class="section__unit">Get in touch</span>
 
             <div class="contact__container container grid section__border">
                 <div class="contact__content">
@@ -499,13 +551,13 @@
                                 Let's chat <i class="fas fa-arrow-right"></i>
                             </a>
                         </div>
-                          <button class="resume__button">Download Resume <i class="fa-solid fa-download"></i></button> 
+                          <a href="images/Current-resume-for-Afolasade.pdf" class="resume__button" download> Download Resume <i class="fa-solid fa-download"></i></a>
                     </div>
                 </div>
 
                 <div class="contact__content">
                     <h3 class="contact__title">
-                        <i class="fa-solid fa-up-right-from-square"></i> Notify Me about the job
+                        <i class="fa-solid fa-up-right-from-square"></i> Notify me about your project
                     </h3>
 
                     <form action="" class="contact__form" id="contact-form">
@@ -538,7 +590,7 @@
     <!--==================== FOOTER ====================-->
     <footer class="footer">
         <div class="footer__container container">
-            <img src="images/logo_b.png" alt="footer logo" class="footer__logo">
+            <img src="images/logo_c.png" alt="footer logo" class="footer__logo">
             <p>Frontend Developer</p>
 
             <ul class="footer__list">
