--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                     <div class="swiper-wrapper">
                         <!--==================== PROJECTS 1 ====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="images/preview.png" alt="project image1" class="projects__img">
+                            <img src="images/trabode.png" alt="project image1" class="projects__img">
                             <div class="projects__layer">
                                 <p>This project presumes a 3-paged house-listing brand website based in California that provides list of houses whereby customers can book online and lodge singly or with
                                     family members (at least, 5) on vacation in different parts of the world. It also features a share and earn benefit, whereby 
@@ -474,7 +474,7 @@
 
                         <!--==================== PROJECTS 6 ====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="images/preview.png" alt="project image1" class="projects__img">
+                            <img src="images/vconnect.png" alt="project image1" class="projects__img">
                             <div class="projects__layer">
                                 <p>This project is a two-paged Facebook cloned website. It displays similar features and characteristics with
                                     Facebook and users can view their profile. Users can also use with the light or dark theme.
