--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                                 <span class="projects__subtitle">Advertising</span>
                                 <h1 class="projects__title">Digital products</h1>
 
-                                <a href="" class="projects__button">
+                                <a href="https://digtub.netlify.app" class="projects__button">
                                     View demo <i class="fas fa-arrow-right"></i>
                                 </a>
                             </div>
@@ -466,7 +466,7 @@
                                 <span class="projects__subtitle">E-commerce</span>
                                 <h1 class="projects__title">Online store</h1>
 
-                                <a href="" class="projects__button">
+                                <a href="https://carrts.netlify.app" class="projects__button">
                                     View demo <i class="fas fa-arrow-right"></i>
                                 </a>
                             </div>
