--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 
                         <!--==================== PROJECTS 4 ====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="images/preview.png" alt="project image1" class="projects__img">
+                            <img src="images/digtub.png" alt="project image1" class="projects__img">
                             <div class="projects__layer">
                                 <p>This project presumes a digital brand that provides digital products to its customers
                                     ranging from Web development, App Development etc. They also provide a training workshop. <br> <br> It helps solve the problem of 
@@ -453,7 +453,7 @@
 
                         <!--==================== PROJECTS 5 ====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="images/preview.png" alt="project image1" class="projects__img">
+                            <img src="images/carts.png" alt="project image1" class="projects__img">
                             <div class="projects__layer">
                                 <p>This project presumes an E-commerce brand that displays the list of items and products available
                                     for sale to its customers. It also offers sweet discount and free delivery options and customers can purchase a 
