--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                                 <p>This project presumes a 3-paged house-listing brand website based in California that provides list of houses whereby customers can book online and lodge singly or with
                                     family members (at least, 5) on vacation in different parts of the world. It also features a share and earn benefit, whereby 
                                     a person based in the country can share his/her excess house space with visitors at a price. <br> <br> It solves
-                                    lodging problems for travellers/visitors and also provides avenue for partners to earn while sharing.
+                                    lodging problems for travellers/visitors and also provides avenue for partners to earn while sharing. <br> <br> #html #css #javascript
                                 </p>
                             </div>
 
@@ -391,12 +391,12 @@
 
                         <!--==================== PROJECTS 2 ====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="images/preview.png" alt="project image1" class="projects__img">
+                            <img src="images/garetto.png" alt="project image1" class="projects__img">
                             <div class="projects__layer">
                                 <p>This project presumes a Food brand whereby customers can have access to all the information about the various food and drink options that are available 
                                     for sale at a given period, time or day. Customers can also meet the brand owner and basic information about the brand.
                                     Walk-ins are available in the physical location at the stated time according to customer's preferences. <br> <br> It solves the problem of helping customers
-                                     decide their restaurant/ food choices without having to be physically present.
+                                     decide their restaurant/ food choices without having to be physically present. <br> <br> #Reactjs #css 
                                 </p>
                             </div>
 
@@ -404,7 +404,7 @@
                                 <span class="projects__subtitle">Advertising</span>
                                 <h1 class="projects__title">Restaurant</h1>
 
-                                <a href="" class="projects__button">
+                                <a href="https://garetto.netlify.app" class="projects__button">
                                     View demo <i class="fas fa-arrow-right"></i>
                                 </a>
                             </div>
@@ -415,9 +415,9 @@
                             <img src="images/preview.png" alt="project image1" class="projects__img">
                             <div class="projects__layer">
                                 <p>This project presumes a body fitness brand which provides different walk-in activities to registered customers, Users can have access to basic body fitness information,
-                                    they can also check their Body Mass Index(BMI) to know whether they are physically fit or close. They can also purchase any of
-                                    their choice plan and subscribe to receive fitness updates. <br> <br> It solves the problem of helping people(whether registered customers or not) to shape and build their ideal
-                                    body and live to the fullest.
+                                    can also check their Body Mass Index(BMI) to know whether they are physically fit or close. They can purchase any of
+                                    their choice plan and subscribe to receive fitness updates via email. <br> <br> It solves the problem of helping people(whether registered customers or not) to shape and build their ideal
+                                    body and live to the fullest. <br> <br> #html #css #javascript
                                 </p>
                             </div>
 
@@ -437,7 +437,7 @@
                             <div class="projects__layer">
                                 <p>This project presumes a digital brand that provides digital products to its customers
                                     ranging from Web development, App Development etc. They also provide a training workshop. <br> <br> It helps solve the problem of 
-                                    customers getting digital products / services at their fingertips. No stress, no hassle.
+                                    customers getting digital products / services at their fingertips. No stress, no hassle. <br> <br> #html #css #javascript
                                 </p>
                             </div>
 
@@ -458,7 +458,7 @@
                                 <p>This project presumes an E-commerce brand that displays the list of items and products available
                                     for sale to its customers. It also offers sweet discount and free delivery options and customers can purchase a 
                                     item online and have it delivered right to them. <br> <br> It alleviates the stress that a customers has to go through 
-                                    before purchasing / owning any item even at reduced costs.
+                                    before purchasing / owning any item even at reduced costs. <br> <br> #html #css #javascript
                                 </p>
                             </div>
 
@@ -478,7 +478,7 @@
                             <div class="projects__layer">
                                 <p>This project is a two-paged Facebook cloned website. It displays similar features and characteristics with
                                     Facebook and users can view their profile. Users can also use with the light or dark theme.
-                                    <br><br> You can literally view similar physical features of Facebook app on this project.
+                                    <br><br> You can literally view similar physical features of Facebook app on this project. <br> <br> #html #css #javascript
                                 </p>
                             </div>
 
@@ -494,10 +494,10 @@
 
                         <!--==================== PROJECTS 7 ====================-->
                         <div class="projects__content swiper-slide">
-                            <img src="images/preview.png" alt="project image1" class="projects__img">
+                            <img src="images/hoobank.png" alt="project image1" class="projects__img">
                             <div class="projects__layer">
                                 <p>This project presumes a Finance brand that displays get started features, and other banking features. <br> <br>It is designed with a user interface that allows users 
-                                    to get an easy and swift online banking experience.
+                                    to get an easy and swift online banking experience. <br> <br> #Reactjs #tailwind 
                                 </p>
                             </div>
 
@@ -505,7 +505,7 @@
                                 <span class="projects__subtitle">Finance</span>
                                 <h1 class="projects__title">Banking app</h1>
 
-                                <a href="" class="projects__button">
+                                <a href="https://ho0bank.netlify.app" class="projects__button">
                                     View demo <i class="fas fa-arrow-right"></i>
                                 </a>
                             </div>
