--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                         <div class="projects__content swiper-slide">
                             <img src="images/trabode.png" alt="project image1" class="projects__img">
                             <div class="projects__layer">
-                                <p>This project presumes a 3-paged house-listing brand website that provides list of houses whereby customers can book online and lodge singly or with
+                                <p>A 3-paged house-listing brand website that provides list of houses whereby customers can book online and lodge singly or with
                                     family members (at least, 5) on vacation in different parts of the world. Features a share and earn benefit, whereby 
                                     a person based in the country can share his/her excess house space with visitors at a price. <br> <br> It solves
                                     lodging problems for travellers and also provides avenue for partners to earn while sharing. <br> <br> #html #css #javascript
@@ -395,7 +395,7 @@
                             <div class="projects__layer">
                                 <p>This project presumes a Food brand whereby customers can have access to all the information about the various food and drink options that are available 
                                     for sale at a given period, time or day. Customers can also see basic information about the brand.
-                                    Walk-ins are available in the physical location at the stated time according to customer's preferences. <br> <br> It solves the problem of helping customers
+                                    Walk-ins are available also <br> <br> It solves the problem of helping customers
                                      decide their restaurant/ food choices without having to be physically present. <br> <br> #Reactjs #css 
                                 </p>
                             </div>
