--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <a href="#contact" class="nav__link">Contact</a>
                         </li>
                         <li class="nav__item-resume">
-                            <a href="images/react-frontend-developer-resume-for-Afolasade.pdf" class="nav__resume" download> Resume <i class="fa-solid fa-download"></i></a>
+                            <a href="images/updated-frontend-dev-resume-for-Afolasade.pdf" class="nav__resume" download> Resume <i class="fa-solid fa-download"></i></a>
                         </li>
                     </ul>
 
@@ -106,11 +106,12 @@
                         <p class="home__info-description_meetme">
                            Hi, I'm Afolasade, I would love that you address me as Fola 😍 <br>
                            I'm a frontend developer, I'm also a content creator and a creative writer who's passionate about exploring digital tools
-                           to expand a brand's sales and visibility. Besides learning to have both technical and soft skills, I have acquired
+                           to see a business evolve. Besides learning to have both technical and soft skills, I have acquired
                            high level programming knowledge from taking online courses on Udemy and Codecademy bagging an
                            expert frontend developer certificate. <br>
-                           <br> For practical experiences, I recently interned at Xenoph Technologies Limited, where I sharpened
-                           my basic programming skills. I enjoy exploring creative ideas to deliver quality and 
+                           <br> For practical experiences, I interned at Xenoph Technologies Limited, where I led two teams of 15 employees and boosted UX by 40% in 6 months. Developed a web app; Eduvice, collaborating with management 
+                           while bearing users conveinence which saved 500+ students to write their exams from their comfort zones. Also have maintained a 5 star rating with 10+ clients freelancing on Fiverr.
+                             I enjoy exploring creative ideas to deliver quality and 
                            visually compelling sites with user- friendly interactions.
                            I'm an independent employee who pays close attention to details, naturally
                            curious and perpetually working on improving my craft one design problem at a time. <br> <br> I also do fashion design and explore nature at my leisure.
@@ -169,15 +170,16 @@
                 <span class="section__unit">Here you go</span>
                 <div class="meetme__container container section__border">
                 <p class="meetme__description">Hi, I'm Afolasade, I would love that you address me as Fola 😍 <br>
-                    I'm a frontend developer, I'm also a content creator and a creative writer who's passionate about exploring digital tools
-                    to expand a brand's sales and visibility. Besides learning to have both technical and soft skills, I have acquired
-                    high level programming knowledge from taking online courses on Udemy and Codecademy bagging an
-                    expert frontend developer certificate. <br>
-                    <br> For practical experiences, I recently interned at Xenoph Technologies Limited, where I sharpened
-                    my basic programming skills. I enjoy exploring creative ideas to deliver quality and 
-                    visually compelling sites with user- friendly interactions.
-                    I'm an independent employee who pays close attention to details, naturally
-                    curious and perpetually working on improving my craft one design problem at a time. <br> <br> I also do fashion design and explore nature at my leisure.
+                           I'm a frontend developer, I'm also a content creator and a creative writer who's passionate about exploring digital tools
+                           to see a business evolve. Besides learning to have both technical and soft skills, I have acquired
+                           high level programming knowledge from taking online courses on Udemy and Codecademy bagging an
+                           expert frontend developer certificate. <br>
+                           <br> For practical experiences, I interned at Xenoph Technologies Limited, where I led two teams of 15 employees and boosted UX by 40% in 6 months. Developed a web app; Eduvice, collaborating with management 
+                           while bearing users conveinence which saved 500+ students to write their exams from their comfort zones. Also have maintained a 5 star rating with 10+ clients freelancing on Fiverr.
+                             I enjoy exploring creative ideas to deliver quality and 
+                           visually compelling sites with user- friendly interactions.
+                           I'm an independent employee who pays close attention to details, naturally
+                           curious and perpetually working on improving my craft one design problem at a time. <br> <br> I also do fashion design and explore nature at my leisure.
                 </p>
                 </div>
             </section>
@@ -224,7 +226,7 @@
                         </div>
 
                         <h3 class="skills__name">ReactJS</h3>
-                        <span class="skills__subtitle">Basic</span>
+                        <span class="skills__subtitle">Intermediate</span>
                     </div>
 
                     <div class="skills__data">
@@ -551,7 +553,7 @@
                                 Let's chat <i class="fas fa-arrow-right"></i>
                             </a>
                         </div>
-                          <a href="images/react-frontend-developer-resume-for-Afolasade.pdf" class="resume__button" download> Download Resume <i class="fa-solid fa-download"></i></a>
+                          <a href="images/updated-frontend-dev-resume-for-Afolasade.pdf" class="resume__button" download> Download Resume <i class="fa-solid fa-download"></i></a>
                     </div>
                 </div>
 
